# Auryn

./: .gitignore  Cargo.toml
crates/auryn-compiler/: Cargo.toml
crates/auryn-compiler/src/: lib.rs  main.rs
crates/auryn-compiler/src/auryn/: api.rs  diagnostic.rs  environment.rs  file_id.rs  input_files.rs  mod.rs  monomorphization.rs  parser.rs  syntax_id.rs  syntax_tree.rs  tokenizer.rs  world.rs
crates/auryn-compiler/src/java/: class.rs  display.rs  mod.rs  source_graph.rs  symbolic_evaluation.rs
crates/auryn-compiler/tests/: diagnostic_tests.rs  runtime_tests.rs
crates/auryn-compiler/tests/common/: mod.rs
crates/auryn-compiler/tests/snapshots/: diagnostic_tests__ui@argument_count_mismatch_over.au.snap  diagnostic_tests__ui@argument_count_mismatch_under.au.snap  diagnostic_tests__ui@assignment_type_mismatch.au.snap  diagnostic_tests__ui@circular_alias.au.snap  diagnostic_tests__ui@function_receiver_unconstrained.au.snap  diagnostic_tests__ui@generic_function_impossible_inference.au.snap  diagnostic_tests__ui@generic_function_impossible_inference_2.au.snap  diagnostic_tests__ui@generic_function_impossible_to_infer_arg.au.snap  diagnostic_tests__ui@generic_function_mismatched_type.au.snap  diagnostic_tests__ui@generic_function_non_inferred_arg.au.snap  diagnostic_tests__ui@inference_failure.au.snap  diagnostic_tests__ui@inference_failure_nested_array_calls.au.snap  diagnostic_tests__ui@invalid_application.au.snap  diagnostic_tests__ui@invalid_break_outside_loop.au.snap  diagnostic_tests__ui@invalid_cast.au.snap  diagnostic_tests__ui@invalid_continue_outside_loop.au.snap  diagnostic_tests__ui@invalid_extern_attribute.au.snap  diagnostic_tests__ui@invalid_number_literal.au.snap  diagnostic_tests__ui@invalid_struct_literal.au.snap  diagnostic_tests__ui@invalid_type_not.au.snap  diagnostic_tests__ui@invalid_type_struct.au.snap  diagnostic_tests__ui@invalid_type_while.au.snap  diagnostic_tests__ui@invalid_update.au.snap  diagnostic_tests__ui@invalid_update_global.au.snap  diagnostic_tests__ui@invalid_update_intrinsic.au.snap  diagnostic_tests__ui@missing_fields.au.snap  diagnostic_tests__ui@missing_struct.au.snap  diagnostic_tests__ui@missing_type.au.snap  diagnostic_tests__ui@module_syntax_error.au.snap  diagnostic_tests__ui@non_applicated_type.au.snap  diagnostic_tests__ui@non_applicated_type_forward_ref.au.snap  diagnostic_tests__ui@path_missing_property.au.snap  diagnostic_tests__ui@recover_assignment.au.snap  diagnostic_tests__ui@recover_block.au.snap  diagnostic_tests__ui@recover_call.au.snap  diagnostic_tests__ui@recover_expression.au.snap  diagnostic_tests__ui@recover_function_def.au.snap  diagnostic_tests__ui@recover_newline_separated.au.snap  (+16 more)
crates/auryn-lsp/: Cargo.toml
crates/auryn-lsp/src/: analyzer.rs  cursor.rs  main.rs
src/: lib.rs  (+1 more)
(+500 files in other folders)
