[package]
name = "auryn"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
ariadne = "0.6.0"
# Should just resolve to whatever version ariadne uses
yansi = "*"
indexmap = "2.12.1"
rustc-hash = "2.1.1"

[dev-dependencies]
insta = { version = "1.44.3", features = ["glob"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
# This simplifies module management imho
pub_use = "warn"
dbg_macro = "warn"
