[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
stdx = { path = "crates/stdx" }
auryn-compiler = { path = "crates/auryn-compiler" }

insta = { version = "1.44.3", features = ["glob"] }
ariadne = "0.6.0"
# Should just resolve to whatever version ariadne uses
yansi = "*"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[workspace.lints.clippy]
dbg_macro = "warn"
