[package]
name = "auryn-compiler"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "The auryn programming language"
repository = "https://github.com/Inky-developer/Auryn"

default-run = "auryn-compiler"

[dependencies]
stdx.workspace = true
ariadne.workspace = true
yansi.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
