[package]
name = "auryn-lsp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
auryn-compiler.workspace = true
stdx.workspace = true

blocking = "1"
futures-lite = "2"
tower-lsp-server = { version = "0.23", default-features = false, features = ["runtime-agnostic"] }

[lints]
workspace = true
